--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ api.version=${API_VERSION:v1}
 server.error.include-message=always
 
 # Para activar los mensajes nivel DEBUG en las clases albumes, por ejemplo
-logging.level.albumes=DEBUG
+logging.level.org.example=DEBUG
 # Ver consultas SQL (opcional, útil para depurar)
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
@@ -19,6 +19,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
