--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.5.6</version>
-        <relativePath/> </parent>
+        <relativePath/>
+    </parent>
     <groupId>albumes</groupId>
     <artifactId>Albumes</artifactId>
     <version>0.0.1-SNAPSHOT</version>
