Seguridad medio hecha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.application.name=Albumes
 # Cambiamos el puerto de escucha, por defecto es 8080
 # e indicamos que lea la variable de entorno PORT si no existe que use 3000
 server.port=${PORT:3000}
@@ -8,19 +7,40 @@ api.version=${API_VERSION:v1}
 # Para los mensajes en las excepciones
 server.error.include-message=always
 
-# Para activar los mensajes nivel DEBUG en las clases albumes, por ejemplo
-logging.level.org.example=DEBUG
-# Ver consultas SQL (opcional, útil para depurar)
-logging.level.org.hibernate.orm.jdbc.bind=TRACE
-
+## Base de datos de desarrollo puede ser H2
+# En fichero embebida o en memoria, tú eliges
 # Configuración de H2 (Base de datos en memoria)
 spring.datasource.url=jdbc:h2:mem:albumesdb
+# Usuario y contraseña de la base de datos
 spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.password=password
+# Habilitamos la consola de H2
+# En nuestro caso http://localhost:3000/h2-console
 spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
+## Carga de Base de Datos
+# Habilitamos que cargue los datos de prueba en la base de datos
+# estos datos los carga del fichero data.sql del directorio resources
 spring.jpa.defer-datasource-initialization=true
+# Habilitamos la creación de la base de datos en cada arranque
 spring.jpa.hibernate.ddl-auto=create-drop
+# Habilitamos la carga de datos de prueba en cada arranque
 spring.sql.init.mode=always
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+## SQL
+# Habilitamos los mensajes sql en el log para ver las consultas
+spring.jpa.show-sql=true
+# Formatea la salida SQL para que se lea mejor en la consola
+spring.jpa.properties.hibernate.format_sql=true
+
+## Logging
+# Para activar los mensajes nivel DEBUG en las clases es.carlosgs.tarjetas, por ejemplo
+logging.level.es.carlosgs.tarjetas=DEBUG
+# Para ver los valores de los parámetros consultas Hibernate 6 \ Spring Boot 3
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+## JWT
+# Configuración de secreto y tiempo de token en segundos (86400 = 24 horas) pon el que quieras
+jwt.secret=BabyNoMeLlameQueYoEstoyOcupáOlvidandoTusMaleYaDecidíQueEstaNocheSeSaleConToaMisMotomamiConTodaNisGyales
+# expiration in seconds (24*60*60 = 24 horas)
+jwt.expiration=86400
